solc_mutator_ossfuzz_seed_corpus/test_sol/test_406d08e6c731830e5178b260417b2342f4a1064011af1c5670ab897875ca7dfb_88abce4c622d24d71cf3fd42596e474888d76303_sol.sol
==== Source:  ====

==== Source: su0.sol ====
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9
}
contract C0 {
  function f0() external    returns(uint168 o0,uint56 o1)
  {
    bool[6][][1][] storage l0;
    unchecked {
      function () external   l1;
      (bool l2, bytes memory l3) = address(this).call(bytes("a6e5d5f240bed5da9740271eb5a17e8c77aaf0c9ff162c"));
      {
        (l0[uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)]) = ([new bool[6][](5)]);
        {
          {
            EN0 l4 = EN0(uint8(1));
            (bool l5, bytes memory l6) = address(this).call(bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"));
            address payable l7 = payable(msg.sender);
          }
          {
            function () external   returns (int128) l8;
            (bool l9, bytes memory l10) = address(this).call(bytes("9234bce51b5ce604e077d5a0b9bc7e2185df4869810baedfa603dae9dba120fa540dae919b28e7"));
            l1();
            bytes27 l11 = bytes27(0x2139fa1958f8716a5dba7ae8708f733c681fc7766703f5cca5168b);
            address[][1][9][] memory l12 = new address[][1][9][](4);
            function () internal   returns (bytes30, bytes26) l13;
            {
            }
          }
          (bool l14, bytes memory l15) = address(this).call(bytes("2cd45ce3f6cd9e8699f1d3ebff7f7b2b44c9e0655e898d3da8e2ffffffffffffffffffffffffffffffffffffffffff"));
        }
        (l2,l3) = address(this).call(abi.encodeCall(l1, ()));
        (bool l16, bytes memory l17) = address(this).call(bytes("ffffffffffffff578fa1b8c8d5e8010053a48d37418da20f1db9e5217a"));
      }
      l0[((((address(this).balance % uint256(0)) ^ uint256(54339852751921012895637359219685990296789189482083632914216852268942923939126)) + uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)) * uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935))] = [new bool[6][](5)];
    }
  }
  uint56   s0 = uint56(15665731416919623);
  EN0  public s1 = EN0.M8;
  uint88  public s2 = uint88(309485009821345068724781055);
  int200   s3 = int200(803469022129495137770981046170581301261101496891396417650687);
}
pragma solidity >= 0.0.0;
// ----
// TypeError 3464: (su0.sol:341-343): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su0.sol:1600-1602): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
